--- a/Js-Jquery/index.html
+++ b/Js-Jquery/index.html
@@ -18,7 +18,7 @@
             <input type="password" name="password" id="password" placeholder="password">
         </div>
         <div class="check">
-            <input type="checkbox" name="" id=""><span>Remember me</span>
+            <input type="checkbox" name="" id="check"><span>Remember me</span>
         </div>
         <div class="btn">
             <button id="login">Log In</button>
